fixed header links to align with bottom of logo using css flex changes

--- a/css/index.css
+++ b/css/index.css
@@ -86,7 +86,7 @@ header {
 header nav {
     justify-content: center;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
 }
 
 header nav a {
